--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,12 @@
-name: BinderTutorial_QC
+name: MetabSimpleQcViz
 channels:
 - defaults
 dependencies:
-- python=3.6.7
-- matplotlib=2.2.3
-- numpy=1.16.2
+- python=3.7.3
+- jupyter=1.0.0
+- matplotlib=3.0.3
+- numpy=1.16.3
 - pandas=0.24.2
+- scikit-learn=0.21.1
 - seaborn=0.9.0
-- scikit-learn=0.20.3
 - xlrd=1.2.0
